k8s/apps/media/radarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: radarr-service
  namespace: media
spec:
  selector:
    app: radarr
  ports:
    - protocol: TCP
      port: 7878
      targetPort: 7878
