k8s/apps/media/radarr/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr-ingress
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`movies.media.armleth.fr`)
      kind: Rule
      services:
        - name: radarr-service
          port: 7878
      middlewares:
        - name: authentik-forward-auth
          namespace: authentik
  tls:
    secretName: radarr-tls-secret
